fix home overflow

--- a/src/app/css/pages/_main.scss
+++ b/src/app/css/pages/_main.scss
@@ -1,5 +1,8 @@
 // ---
 // Presentation
+.main-page{
+	overflow: hidden;
+}
 .presentation {
 	position: relative;
 	width: 100%;
